Fix URL and RemoteJWKSet deprecations in SocialAuthService
- Replace deprecated `new URL(String)` with `URI.create().toURL()`
- Initialize `RemoteJWKSet` with explicit `DefaultResourceRetriever` and timeouts
- Remove redundant comments regarding Apple client secret
- Organize imports